# inf2070-drl-gem-study

./: .gitignore  .gitmodules  GETTING_STARTED.md  LICENSE.txt  Makefile  README.md  example.py  guess-the-number.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: render-plantuml.yml
docs/: class-diagram.puml
eval/: eval.py
examples/: README.md  register_new_env.py  start_retrieval_server.sh  train_oat.py  train_oat_grpo.py  train_oat_mt.py  train_oat_tree.py
examples/multiagent/: README.md
examples/multiagent/tau_bench_retail/: .gitignore  README.md  run_eval.py  tau_bench_agent.py  tau_bench_env.py
examples/train_oat/: README.md  train_oat.py  train_oat_grpo.py  train_oat_mt.py
examples/train_openrlhf/: README.md  agent_func_multi_turn_notemplate.py  agent_func_multi_turn_template.py  agent_func_single_turn.py  run_count_letter.sh  run_guess_number.sh
examples/train_openrlhf/dataset/: gem_guess_game.jsonl  letter_counting_game.jsonl
examples/train_rl2/: README.md  async_multi_turn.py  async_single_turn.py  count_letter.sh  guess_number.sh  vec_multi_turn.py
examples/train_tinker/: README.md  gem_adapter.py  run_gem_train.py  tinker_cookbook_adapter.py  tinker_cookbook_train.py  tinker_train.py
examples/train_verl/: README.md  config.yaml  run.sh  run_guess_the_number.sh  train_verl.py
gem/: __about__.py  __init__.py  core.py
gem/envs/: __init__.py  code_env.py  dummy_env.py  math_env.py  math_visual_env.py  mcpmark.py  multi_turn.py  qa_env.py  reasoning_gym.py  registration.py
gem/envs/game_env/: __init__.py  fifteen_puzzle.py  game_2048.py  guess_the_number.py  hangman.py  mastermind.py  minesweeper.py  sudoku.py  tower_of_hanoi.py  word_search.py  wordle.py
gem/envs/game_env/crosswords/: __init__.py  crosswords.py
gem/envs/game_env/sokoban/: __init__.py  sokoban.py  utils.py
gem/envs/multiagent/: __init__.py  multi_agent_env.py
gem/envs/terminal/: README.md  docker_env.py  executor.py  reward.py
gem/envs/textarena/: README.md  base.py  fifteen_puzzle.py  guess_the_number.py  hangman.py  mastermind.py  minesweeper.py  sudoku.py  tower_of_hanoi.py  wordle.py
gem/envs/webshop/: preprocess.py  setup.sh  utils.py  webshop.py
gem/envs/webshop/web_agent_site/: utils.py
gem/envs/webshop/web_agent_site/engine/: engine.py  goal.py
gem/multiagent/: __init__.py
gem/tools/: base_tool.py  mcp_tool.py  python_code_tool.py  search_tool.py  tool_env_wrapper.py
gem/tools/mcp_server/: time_mcp.py
gem/tools/search_engine/: google_search_server.py  retrieval_server.py  serp_search_server.py
gem/utils/: constants.py  debug.py  math_grader.py  parsing.py  qa_em.py  sandbox.py  seeding.py
gem/vector/: async_vector_env.py  sync_vector_env.py  vector_env.py
gem/wrappers/: episode_tracking_wrapper.py  observation_wrapper.py  stateful_observation.py  wrapper_factory.py
inf2070-studies/: ARQUITETURA.md  CONFIGURAÇÃO_DE_AMBIENTE.md  NOTEBOOKS.md  README.md  setup.sh
inf2070-studies/arquitetura/: README.md  requirements.txt
inf2070-studies/avaliacao-arquitetura/: class-diagram.plantuml  gem-class-diagram.plantuml
inf2070-studies/notebooks/: README.md  experiments.ipynb  getting-started.ipynb  reinforce.ipynb  xlsx_generator.py  xlsx_read.py
inf2070-studies/notebooks/policy_gradient/: reinforce.ipynb
src/gem/: __about__.py
tests/: __init__.py  misc.py
tests/test_env/: terminal_agent_prompt.md  test_code.py  test_game.py  test_guess_the_number.py  test_math.py  test_qa.py  test_reasoning_gym.py  test_terminal.py  test_textarena.py  test_webshop.py
tests/test_multiagent/: test_multiagent.py
tests/test_tool/: mcp_tool_prompt.md  test_async.py  test_mcp_tool.py  test_python_code_tool.py  test_search_engine_reliability.py  test_search_tool.py  test_time_mcp.py
