[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gem"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Zichen", email = "liuzc@sea.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "nltk==3.9.1",
]

[project.urls]
Documentation = "https://github.com/Zichen/gem#readme"
Issues = "https://github.com/Zichen/gem/issues"
Source = "https://github.com/Zichen/gem"

[tool.hatch.version]
path = "gem/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:gem tests}"

[tool.coverage.run]
source_pkgs = ["gem", "tests"]
branch = true
parallel = true
omit = [
  "gem/__about__.py",
]

[tool.coverage.paths]
gem = ["gem", "*/gem/gem"]
tests = ["tests", "*/gem/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
