[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gem-llm"
dynamic = ["version"]
description = 'A Gym for Generalist LLMs.'
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
  { name = "Zichen Liu", email = "lkevinzc@gmail.com" },
  { name = "Anya Sims", email = "anya.sims@stats.ox.ac.uk" },
  { name = "Keyu Duan", email = "k.duan@u.nus.edu" },
  { name = "Changyu Chen", email = "abelco.cy@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "nltk==3.9.1",
  "math-verify[antlr4_13_2]",
  "reasoning-gym==0.1.23",
  "msgspec==0.19.0",
  "pylatexenc",
  "transformers",
  "datasets",
]

[project.optional-dependencies]
search = [
  "mosec",
  "aiohttp",
  "bs4",
  "chardet",
  "google-api-python-client",
  "torch",
  "torchvision",
  "torchaudio",
  "pyserini",
]

mcp = [
  "fastmcp",
  "pyyaml>=6.0.0",
]

[project.urls]
Documentation = "https://axon-rl.github.io/gem/"
Issues = "https://github.com/axon-rl/gem/issues"
Source = "https://github.com/axon-rl/gem"

[project.license]
text = "Apache-2.0"

[tool.hatch.version]
path = "gem/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["gem"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:gem tests}"

[tool.coverage.run]
source_pkgs = ["gem", "tests"]
branch = true
parallel = true
omit = [
  "gem/__about__.py",
]

[tool.coverage.paths]
gem = ["gem", "*/gem/gem"]
tests = ["tests", "*/gem/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pylint.master]
load-plugins = "pylint.extensions.docparams,pylint.extensions.docstyle,pylint.extensions.no_self_use"
default-docstring-type = "google"
ignore-paths = ["gem/__about__.py"]

[tool.pylint.format]
max-line-length = 88
indent-after-paren = 4
indent-string = "    "

[tool.pylint.imports]
known-third-party = "wandb"

[tool.pylint.reports]
output-format = "colorized"
reports = "no"
score = "yes"
max-args = 7

[tool.pylint.messages_control]
disable = ["W0201", "W0108", "W0212", "W1514", "R0902", "R0903", "R0913", "R0914", "R0915", "R1719",
"R1732", "R0801", "C0103", "C3001", "C0116", "W0106", "R0912", "R1702", "W0640", "W1203",
"R0402", "C0199", "R6301", "C0301", "W0105", "C0115", "W0621", "C0415", "W0621", "E0401"]

[tool.yapf]
based_on_style = "yapf"
spaces_before_comment = 4
dedent_closing_brackets = true
column_limit = 88
continuation_indent_width = 4

[tool.isort]
profile = "black"
multi_line_output = 3
indent = 4
line_length = 88
known_third_party = "wandb"

[tool.mypy]
files = "gem/**/*.py"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true

[tool.pydocstyle]
ignore = ["D100", "D102", "D104", "D105", "D107", "D203", "D213", "D401", "D402"]
